end of week commit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@ importFrom(R6, R6Class)
 import(httr)
 import(rjson)
 import(stringr)
-export(PicSureHpdsAdapter)
+export(Adapter)
 export(PicSureHpdsResourceConnection)
-export(PicSureHpdsBypassAdapter)
+export(BypassAdapter)
 export(PicSureHpdsBypassConnection)
 export(PicSureHpdsBypassConnectionAPI)
 export(PicSureHpdsDictionary)
