Working queries using BypassAdapter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,14 @@
 importFrom(R6, R6Class)
 import(httr)
-import(rjson)
 import(stringr)
+import(hash)
 export(Adapter)
-export(PicSureHpdsResourceConnection)
 export(BypassAdapter)
+export(PicSureHpdsResourceConnection)
 export(PicSureHpdsBypassConnection)
 export(PicSureHpdsBypassConnectionAPI)
 export(PicSureHpdsDictionary)
 export(PicSureHpdsDictionaryResult)
 export(PicSureHpdsQuery)
+export(HpdsAttribList)
+export(HpdsAttribListKeys)
