--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Depends: R (>= 3.1.0), PicSureClient
 License: Apache License 2.0
 Imports:
   R6,
-  rjson,
-  stringr
+  stringr,
+  hash,
+  httr
 
