Added query.getResults() function and updated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,12 @@ export(query.crosscounts.add)
 export(query.crosscounts.delete)
 export(query.filter.add)
 export(query.filter.delete)
+export(query.getResults)
+export(query.load)
 export(query.require.add)
 export(query.require.delete)
 export(query.run)
+export(query.save)
 export(query.select.add)
 export(query.select.delete)
 export(query.show)
