Add api to show and set consent groups for base query

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(query.save)
 export(query.select.add)
 export(query.select.delete)
 export(query.show)
+export(show.consent.filters)
+export(set.consent.filters)
 import(hash)
 import(httr)
 import(jsonlite)
