--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(query.filter.add)
 export(query.filter.delete)
 export(query.getResults)
 export(query.load)
+export(query.from.uuid)
 export(query.require.add)
 export(query.require.delete)
 export(query.run)
@@ -32,8 +33,6 @@ export(query.save)
 export(query.select.add)
 export(query.select.delete)
 export(query.show)
-export(show.consent.filters)
-export(set.consent.filters)
 import(hash)
 import(httr)
 import(jsonlite)
