--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(extract.dataframe)
 export(extract.entries)
 export(extract.keys)
 export(find.in.dictionary)
+export(get.full.dictionary)
 export(get.resource)
 export(new.query)
 export(query.anyof.add)
@@ -23,9 +24,9 @@ export(query.crosscounts.add)
 export(query.crosscounts.delete)
 export(query.filter.add)
 export(query.filter.delete)
+export(query.from.uuid)
 export(query.getResults)
 export(query.load)
-export(query.from.uuid)
 export(query.require.add)
 export(query.require.delete)
 export(query.run)
