ALS-3799: Remove unimplemented query functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 export(getResources)
 export(searchPicsure)
 export(connect)
-export(newQuery)
-export(addFilter)
-export(getCount)
+#export(newQuery)
+#export(addFilter)
+#export(getCount)
 export(bdc.connect)
 export(bdc.searchPicsure)
 export(bdc.setResource)
