ALS-3799: Latest changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 export(getResources)
 export(searchPicsure)
 export(connect)
-#export(newQuery)
-#export(addFilter)
-#export(getCount)
+export(newQuery)
+export(addFilter)
+export(getCount)
+export(getResults)
 export(bdc.connect)
 export(bdc.searchPicsure)
 export(bdc.setResource)
@@ -15,7 +16,7 @@ export(bdc.search)
 export(projectAndFilterResults)
 export(postJSON)
 export(getDataFrame)
-#export(lookupVariables)
+export(lookupVariables)
 
 import(hash)
 import(httr)
