ALS-3799: Fix NAMESPACE imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,7 @@ export(initializeSession)
 export(newQuery)
 export(runQuery)
 export(searchPicsure)
+import(httr)
+import(jsonlite)
+import(stringr)
+import(urltools)
