--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
-Depends: R (>= 3.1.0)
-Imports:
+Depends: R (>= 3.1.0),
   R6,
   httr,
   jsonlite,
