ALS-3799: Added some support for genotype annotation querying

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,14 @@
 
 export(addClause)
 export(bdc.addClause)
+export(bdc.getInfoColumns)
 export(bdc.initializeSession)
 export(bdc.newQuery)
+export(bdc.search)
 export(bdc.searchPicsure)
 export(bdc.setResource)
 export(initializeSession)
+export(lookupGenomicVariables)
 export(newQuery)
 export(runQuery)
 export(searchPicsure)
