ALS-3799: Fix concept path issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bdc.newQuery)
 export(bdc.search)
 export(bdc.searchPicsure)
 export(bdc.setResource)
+export(getGenotypeAnnotations)
 export(initializeSession)
 export(lookupGenomicVariables)
 export(newQuery)
