--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(lookupGenomicVariables)
 export(newQuery)
 export(runQuery)
 export(searchPicsure)
+export(showQuery)
 import(httr)
 import(jsonlite)
 import(stringr)
