ALS-3799: Various refactoring and bugfixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,10 @@ export(bdc.newQuery)
 export(bdc.search)
 export(bdc.searchPicsure)
 export(bdc.setResource)
+export(deleteClause)
+export(getDataFrame)
 export(getGenotypeAnnotations)
 export(initializeSession)
-export(lookupGenomicVariables)
 export(newQuery)
 export(runQuery)
 export(searchPicsure)
