ALS-3799: Add getResource method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(bdc.setResource)
 export(deleteClause)
 export(getDataFrame)
 export(getGenotypeAnnotations)
+export(getResources)
 export(initializeSession)
 export(newQuery)
 export(runQuery)
