ALS-3799: Rename genotypic to genomic for consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(bdc.newQuery)
 export(bdc.searchPicsure)
 export(bdc.setResource)
 export(deleteClause)
-export(getGenotypeAnnotations)
+export(getGenomicAnnotations)
 export(getResources)
 export(initializeSession)
 export(newQuery)
