ALS-3799: Attempt to get tests working

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,13 @@ jobs:
       - checkout
       - run:
           command: |
-            R -e 'devtools:::install_deps(dependencies = TRUE)'
+            R -e 'devtools::install_deps(dependencies = TRUE)'
       - run:
           command: |
             R -e 'install.packages("testthat")'
       - run:
           command: |
-            R -e 'devtools::install_github("jimhester/lintr")'
+            R -e 'install.packages("purrr")'
       - run:
           command: |
             R -e 'devtools::test()'
