ALS-3799: Add function to run query by id

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(bdc.setResource)
 export(deleteClause)
 export(getGenomicAnnotations)
 export(getResources)
+export(getResultByQueryUUID)
 export(initializeSession)
 export(newQuery)
 export(runQuery)
@@ -16,6 +17,7 @@ export(searchPicsure)
 export(showQuery)
 import(httr)
 import(jsonlite)
+import(purrr)
 import(stringr)
 import(tidyverse)
 import(urltools)
