ALS-3799: Minor refactor, fix function name conflict in imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(searchPicsure)
 export(showQuery)
 import(httr)
 import(jsonlite)
-import(purrr)
 import(stringr)
 import(tidyverse)
 import(urltools)
+importFrom(purrr,map)
