ALS-3799: Update DESCRIPTION file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(showQuery)
 import(httr)
 import(jsonlite)
 import(stringr)
+import(tibble)
 import(tidyverse)
 import(urltools)
 importFrom(purrr,map)
