--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,22 @@
-Package: hpds
+Package: picsure
 Type: Package
 Version: 0.1.1
 Date: 2019-10-17
 Title: Simplified R library to communicate with HPDS-hosted services on a PIC-SURE network
-Authors@R: person("Nick", "Benik", role=c("aut","cre"), email="nicholas_benik@hms.harvard.edu")
-Author: Nick Benik [aut, cre]
-Maintainer: Nick Benik <nicholas_benik@hms.harvard.edu>
+Authors@R: person("Ryan", "Amari", role=c("aut","cre"), email="ryan_amari@hms.harvard.edu")
+Author: Ryan Amari [aut, cre]
+Maintainer: Ryan Amari <ryan_amari@hms.harvard.edu>
 Description: Library that is used to connect to access 
     HPDS-hosted services/data on a PIC-SURE network.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
-Depends: R (>= 3.1.0)
-Imports:
+RoxygenNote: 7.2.2
+Depends: R (>= 3.1.0),
   R6,
   httr,
   jsonlite,
   stringr,
-  hash
+  hash,
+  purrr,
+  urltools
